--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ https://templatemo.com/tm-545-finance-business
           <div class="item item-2">
             <div class="img-fill">
                 <div class="text-content">
-                  <h6>Qui sommes nous ?</h6>
-                  <h4></h4>
+                  <h6>Nous sommes aux côtés</h6>
+                  <h4>des plus vulnérables</h4>
                   <p></p>
                   <a href="services.html" class="filled-button">Présentation & Démembrement</a>
                 </div>
@@ -136,8 +136,8 @@ https://templatemo.com/tm-545-finance-business
           <div class="item item-3">
             <div class="img-fill">
                 <div class="text-content">
-                  <h6>we have a solid background</h6>
-                  <h4>Market Analysis<br>&amp; Statistics</h4>
+                  <h6>Nous accompagnons l'Etat</h6>
+                  <h4>Partout où besoin est<br></h4>
                   <p></p>
                   <a href="about.html" class="filled-button">learn more</a>
                 </div>
