--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Finance Business - Contact Page</title>
+    <title>Ministère De l'Equipement du Niger - Page de Contact</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -64,25 +64,25 @@ https://templatemo.com/tm-545-finance-business
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Finance Business</h2></a>
+          <a class="navbar-brand" href="index.html"><h2>Ministère De l'Equipement</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home
+                <a class="nav-link" href="index.html">Accueil
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link" href="about.html">A propos </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="services.html">Our Services</a>
+                <a class="nav-link" href="services.html">Services</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="one-page.html">One Page</a>
@@ -98,7 +98,7 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1>Contact Us</h1>
+            <h1>Contactez-nous</h1>
             <span>feel free to send us a message now!</span>
           </div>
         </div>
@@ -111,7 +111,7 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-4">
             <div class="contact-item">
               <i class="fa fa-phone"></i>
-              <h4>Phone</h4>
+              <h4>Téléphone</h4>
               <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p>
               <a href="#">090-080-0760</a>
             </div>
@@ -127,7 +127,7 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-4">
             <div class="contact-item">
               <i class="fa fa-map-marker"></i>
-              <h4>Location</h4>
+              <h4>Localisation</h4>
               <p>1020 New Mountain Street<br>Forest Park, FP 11220</p>
               <a href="#">View on Google Maps</a>
             </div>
@@ -141,7 +141,7 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Send us a <em>message</em></h2>
+              <h2>Envoyer nous un <em>message</em></h2>
               <span>Suspendisse a ante in neque iaculis lacinia</span>
             </div>
           </div>
@@ -189,7 +189,8 @@ https://templatemo.com/tm-545-finance-business
 	3. Click "Share" and choose "Embed map" tab
 	4. Copy only URL and paste it within the src="" field below
 -->
-      <iframe src="https://maps.google.com/maps?q=Av.+Lúcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <!-- <iframe src="https://maps.google.com/maps?q=Av.+Lúcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15517.245457867684!2d2.1010979!3d13.5164737!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2e84d411a7f54edf!2sMinist%C3%A8re%20de%20l&#39;Equipement!5e0!3m2!1sfr!2sne!4v1623235915877!5m2!1sfr!2sne" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen loading="lazy"></iframe>
     </div>
 
     <div class="partners contact-partners">
@@ -278,7 +279,7 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Copyright &copy; 2020 Financial Business Co., Ltd.
+            <p>Copyright &copy; 2021 Ministère De l'Equipement du Niger.
             
             - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
           </div>
