--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ https://templatemo.com/tm-545-finance-business
                 <a class="nav-link" href="#">Actualités</a>
               </li>                          
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="one-page.html">One Page</a>
