An other customisation

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/templatemo-finance-business.css">
     <link rel="stylesheet" href="assets/css/owl.css">
+    <link href="assets/images/new/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
+	  <link href="/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 <!--
 
 Finance Business TemplateMo
@@ -55,6 +57,7 @@ https://templatemo.com/tm-545-finance-business
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
               <li><a href="#"><i class="fa fa-behance"></i></a></li>
+              <li><img src="assets/images/new/favicon.ico" title="Niger"></a></li>
             </ul>
           </div>
         </div>
@@ -76,16 +79,16 @@ https://templatemo.com/tm-545-finance-business
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">A propos </a>
+                <a class="nav-link" href="#">A propos </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="services.html">Services</a>
+                <a class="nav-link" href="#">Services</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="one-page.html">One Page</a>
+                <a class="nav-link" href="#">One Page</a>
               </li>
             </ul>
           </div>
@@ -99,7 +102,7 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-12">
             <h1>Contactez-nous</h1>
-            <span>feel free to send us a message now!</span>
+            <span>ne soyez pas gêné de nous écrire!</span>
           </div>
         </div>
       </div>
@@ -171,7 +174,7 @@ https://templatemo.com/tm-545-finance-business
                   </div>
                   <div class="col-lg-12">
                     <fieldset>
-                      <button type="submit" id="form-submit" class="filled-button">Send Message</button>
+                      <button type="submit" id="form-submit" class="filled-button">Envoyer</button>
                     </fieldset>
                   </div>
                 </div>
@@ -264,7 +267,7 @@ https://templatemo.com/tm-545-finance-business
                   </div>
                   <div class="col-lg-12">
                     <fieldset>
-                      <button type="submit" id="form-submit" class="filled-button">Send Message</button>
+                      <button type="submit" id="form-submit" class="filled-button">Envoyer</button>
                     </fieldset>
                   </div>
                 </div>
